--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-react-portfolio",
+  "homepage": "https://bighamcyrus.github.io/my-react-portfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
